--- a/overview/architecture-concepts/system-architecture.mdx
+++ b/overview/architecture-concepts/system-architecture.mdx
@@ -1,142 +1,164 @@
 ---
-title: "System Architecture Overview"
-description: "Explore how GoogleTest and GoogleMock work together to support authoring, discovery, execution, and reporting of tests. This section includes mermaid diagrams to map out the major architectural flows, from user test code to framework runtime and result output."
+title: "System Architecture"
+description: "Visualize how GoogleTest and GoogleMock interconnect, from test definitions to execution and reporting. Understand the layered structure, major components (like the test runner, assertion engine, and mocking layer), and how they interact. Includes a mermaid diagram summarizing the main flows."
 ---
 
-# System Architecture Overview
+# System Architecture
 
-Explore how GoogleTest and GoogleMock collaborate to empower you with a seamless workflow for authoring, discovering, executing, and reporting tests. This page maps out the key components and architectural flows, helping you understand the roles of your test code, the framework runtime, and the output mechanisms involved.
+## Understanding the GoogleTest & GoogleMock Framework Interactions
 
----
-
-## Introduction
-
-GoogleTest and GoogleMock together form a powerful C++ testing and mocking framework designed to streamline test automation for your projects. This page focuses on the architectural view of how these tools work together during the entire testing lifecycle.
-
-Understanding the architecture is crucial for diagnosing integration issues, extending the framework, or optimizing test performance.
+Welcome to the System Architecture overview of GoogleTest and GoogleMock. This page helps you visualize the entire journey of your tests — from definitions through execution to reporting — giving you an insightful view of the internal layers and their interactions. Understanding this layered architecture enables you to write more effective tests, troubleshoot with confidence, and appreciate how Google’s C++ testing framework executes your code reliably.
 
 ---
 
-## Architecture Overview
+### Why Care About The System Architecture?
 
-At its core, GoogleTest acts as the test authoring and execution engine, while GoogleMock complements it by enabling sophisticated mock object generation and behavior verification. Their runtime systems integrate tightly to support a robust workflow from test discovery to reporting.
+Imagine you’re running a complex suite of C++ tests for your application. Beyond writing assertions and test cases, knowing how test definitions move through the framework, how mock expectations are verified, and how results get reported can transform how you design your tests and interpret results.
 
-
-### Core Components
-
-- **User Test Code:** This is the test code you write using GoogleTest’s APIs, including mock classes defined by GoogleMock.
-- **Test Framework Runtime:** The combined runtime environment of GoogleTest and GoogleMock that discovers tests automatically, executes them, applies assertions, and handles mock verifications.
-- **Test Runner Entry Point:** The entry function (e.g., `main`) often provided by libraries like `gtest_main` or `gmock_main` initiates and controls the test lifecycle.
-- **Test Result Reporter:** Mechanisms that collect the outcomes and generate human- or machine-readable reports.
+The System Architecture page shows you exactly how key pieces like the test runner, assertion engine, mocking layers, and reporting mechanisms connect and operate cohesively — all while maintaining test isolation, robustness, and clarity.
 
 
-### High-Level Flow
+## GoogleTest and GoogleMock: What Is It?
 
-1. **Initialization:** Your test executable calls `testing::InitGoogleMock()`, which initializes GoogleMock as well as GoogleTest.
-2. **Test Discovery:** The framework automatically discovers all test cases and mock expectations defined.
-3. **Execution:** Tests run sequentially or in parallel, invoking test fixtures, assertions, and mock methods.
-4. **Verification:** Post execution, expectations on mocks are automatically verified.
-5. **Reporting:** The results are formatted and outputted to console or other reporters.
+GoogleTest is a widely adopted C++ testing framework based on the familiar xUnit architecture, supporting extensive assertion types and comprehensive test structuring.
 
+GoogleMock extends GoogleTest by enabling the creation and control of mock objects—allowing precise testing of interactions and dependencies through declarative expectations.
+
+Together, they provide a unified testing and mocking environment to write thoroughly verified, maintainable C++ tests.
+
+
+## Core Components and Their Purpose
+
+At a high-level, the system architecture reveals a layered design that handles:
+
+- **Test Definitions and Discovery:** Your tests (defined with `TEST()`, `TEST_F()`, mocks, and expectations) are automatically registered and grouped.
+- **Test Runner:** Orchestrates the ordered execution of tests, ensuring isolated environments for each test, managing setup/teardown of fixtures.
+- **Assertion Engine:** Evaluates each assertion’s success or failure and handles fatal versus nonfatal failures to control test flow.
+- **Mocking Layer:** Integrates mock object creation, expectation matching, and call verification, allowing precise behavioral control without manual bookkeeping.
+- **Result Collection and Reporting:** Gathers test outcomes with detailed context to produce comprehensive reports.
+
+
+### How Do These Components Interact?
+
+Here is an illustrative Mermaid.js flowchart showing the main interactions and data flow within the GoogleTest and GoogleMock architecture:
 
 ```mermaid
 flowchart TD
-
-  USER_CODE["User's Test Code"] -->|Defines Tests & Mocks| TEST_FRAMEWORK["GoogleTest + GoogleMock Runtime"]
-
-  subgraph "Initialization & Startup"
-    ENTRYPOINT["Test Runner Entrypoint\n(main / gmock_main)" ] --> INIT["Call testing::InitGoogleMock()"]
-    INIT --> TEST_DISCOVERY["Automatic Test Discovery"]
+  subgraph Test_Definition
+    TestCode["User's Test & Mock Definitions"]
   end
 
-  TEST_DISCOVERY --> TEST_EXECUTION["Test Execution"]
+  subgraph Registration
+    TestRegistry["Test Registry & Discovery"]
+  end
 
-  TEST_EXECUTION --> MOCK_VERIFICATION["Mock Expectations Verification"]
-  MOCK_VERIFICATION --> REPORTING["Test Result Reporting"]
-  REPORTING --> USER["User Receives Test Results"]
+  subgraph Execution
+    TestRunner["Test Runner"]
+    AssertionEngine["Assertion Engine"]
+    MockLayer["Mocking Layer"]
+  end
 
-  TEST_FRAMEWORK --> TEST_EXECUTION
+  subgraph Reporting
+    Reporter["Result Collector & Reporter"]
+  end
 
-  classDef process fill:#0ca,stroke:#034,stroke-width:2px;
-  class ENTRYPOINT,INIT,TEST_DISCOVERY,TEST_EXECUTION,MOCK_VERIFICATION,REPORTING process;
+  TestCode -->|Register Tests & Mocks| TestRegistry
+  TestRegistry -->|Provide Tests for Execution| TestRunner
+
+  TestRunner -->|Execute Test Case| AssertionEngine
+  TestRunner -->|Manage Mocks & Expectations| MockLayer
+
+  AssertionEngine -->|Pass/Fail Signal| Reporter
+  MockLayer -->|Verify Expectations| Reporter
+
+  TestRunner -->|Notify Test Completion| Reporter
+
+  Reporter -->|Final Results| User
+
+  classDef component fill:#f9f9f9,stroke:#333,stroke-width:1px
+  class TestRegistry,TestRunner,AssertionEngine,MockLayer,Reporter component
 ```
 
----
 
-## Key Architectural Aspects
+- **User's Test & Mock Definitions:** When you write tests using `TEST()`, declare mocks with `MOCK_METHOD()`, and set expectations, these definitions get automatically registered.
 
-### 1. Test Entrypoint
+- **Test Registry & Discovery:** This layer tracks all registered tests and mocks, enabling the test runner to discover them dynamically without manual enumeration.
 
-The main function typically provided by GoogleMock’s `gmock_main` defines the program’s entry. It performs test initialization by calling `testing::InitGoogleMock(...)`, which prepares both GoogleMock and GoogleTest. You do not need to define this yourself unless custom behavior is needed.
+- **Test Runner:** Drives the test execution pipeline by creating instances of test fixtures, invoking tests, and managing lifecycle hooks.
 
-### 2. Automatic Test Discovery
+- **Assertion Engine:** At runtime, processes assertions within your test functions and communicates results.
 
-GoogleTest automatically finds all your tests and mock expectations registered by the macros (`TEST()`, `TEST_F()`, `EXPECT_CALL()` etc.) at static initialization phase. This obviates the need to manually list or register tests.
+- **Mocking Layer:** Implements mocks, controls their behavior, matches method calls against expectations, and verifies their fulfillment.
 
-### 3. Test Execution Lifecycle
+- **Result Collector & Reporter:** Captures all test outcomes and provides detailed failure reports, enabling effective debugging.
 
-Tests are run one by one, creating fresh test fixture instances for isolated state. GoogleMock tracks mock calls, enforcing expectations during each test.
 
-### 4. Mock Integration
+## Real-World Example
 
-Since GoogleMock depends on GoogleTest, mock expectations participate fully in the testing lifecycle. Mock method calls are monitored, and failures or unexpected calls trigger test failures immediately.
+Consider you have a test suite verifying a class `Queue`. Each test uses assertions like `EXPECT_EQ` and mocks out dependency classes.
 
-### 5. Test Reporting
+1. You define `TEST_F(QueueTest, IsEmptyInitially)` and mock dependencies.
+2. The test runner discovers this test from the registry.
+3. The runner creates a fresh `QueueTest` fixture instance.
+4. Assertion engine evaluates `EXPECT_EQ` calls in your test; mock layer checks if expected calls to mocks happen.
+5. If a failure occurs, the reporter logs detailed context including line numbers, input state, and mock call info.
+6. After test completion, the runner tears down, preparing for the next test.
 
-Results aggregate successes, failures, and warnings. Output is highly detailed, including failure messages and stack traces, making it easy to identify problems.
+Through this systematic flow, GoogleTest and GoogleMock ensure isolated, repeatable, and informative testing.
 
----
 
-## Practical User Flow
+## Practical Tips & Best Practices
 
-Imagine you are developing a module that relies on external dependencies. You write tests for your module using GoogleTest and GoogleMock:
+- **Leverage Automatic Test Registration:** You don't need manual test lists; define tests and mocks, and the registry handles discovery.
 
-1. Define test cases with `TEST()` or `TEST_F()`.
-2. Create mock classes using `MOCK_METHOD` macros.
-3. Use `EXPECT_CALL` to specify required mock behavior and validate interactions.
-4. Run tests. The test binary, powered by `gmock_main`, initializes everything and automatically discovers your tests.
-5. Tests execute. Your test code interacts with mocks, which verify calls in real-time.
-6. Upon test completion (or failure), all mock expectations are verified, and a detailed test report is generated.
+- **Understand Failure Types:** Use `ASSERT_*` macros for fatal failures (stop the current function) and `EXPECT_*` for nonfatal to gather multiple insights in one run.
 
-This architecture hides complex runtime mechanics, so you focus on writing meaningful tests without boilerplate or manual registration.
+- **Isolate Mocks Per Test:** Mock objects are managed fresh per test, avoiding side effects across tests.
 
----
+- **Interpret Reports with Architecture in Mind:** Knowing the flow from assertion engine and mocking verification to final reporting helps decode failure messages.
 
-## Troubleshooting & Tips
+- **Use Fixtures for Shared Setup:** The runner creates fixtures per test ensuring consistent environments and proper resource management.
 
-<Tip>
-If tests do not run, verify that your executable links against `gmock_main` or calls `testing::InitGoogleMock()` explicitly. Without initialization, tests won’t be discovered or executed.
-</Tip>
 
-<Tip>
-Linking GoogleMock with the proper compiler and linker flags, as guided by the CMake build instructions, is essential for correct test runtime behavior.
-</Tip>
+## Troubleshooting Common Issues
 
-<Tip>
-Use GoogleMock’s strict or nice mock wrappers (`StrictMock`, `NiceMock`) to control warning and error reporting of unexpected calls, aiding clear failure diagnosis.
-</Tip>
+<AccordionGroup title="Troubleshooting Common Scenarios">
+<Accordion title="Why does GoogleTest run tests in a specific order?">
+The test runner executes tests in the order registered, but you should not rely on this order. Each test runs in a fresh fixture to guarantee isolation. If order is meaningful, re-examine to improve test independence.
+</Accordion>
+<Accordion title="My mock expectations aren't verified correctly—what's wrong?">
+Ensure you set expectations **before** exercising mocks in your tests. The mocking layer verifies expectations at test teardown, so late or missing expectations cause failures.
+</Accordion>
+<Accordion title="How can I debug failing assertions with minimal output noise?">
+Use `ASSERT_*` for critical test checkpoints and `EXPECT_*` when you want to continue and see more assertion results. Understanding the assertion engine's handling of failures helps balance thoroughness and noise.
+</Accordion>
+</AccordionGroup>
 
-<Tip>
-For parallel or advanced test runners, knowing the architecture helps you ensure your tests remain isolated and mock verifications do not interfere.
-</Tip>
 
----
+## Getting Started Preview
 
-## Summary
+To explore the system in action:
 
-This architecture overview gives you the foundational understanding of how GoogleTest and GoogleMock interoperate to provide an efficient, robust testing environment. By recognizing the test lifecycle stages, your interaction with user code, and how the framework manages mocks and test reporting, you can use, debug, or extend the framework confidently.
+1. Write your first simple test using the `TEST()` macro.
+2. Use mocks with `MOCK_METHOD()` and set expectations using `EXPECT_CALL()`.
+3. Run tests via `RUN_ALL_TESTS()` and observe detailed output from the reporter.
 
----
+Once comfortable with this overview, dive deeper into [Test Discovery and Execution Workflow](/guides/getting-started/test-discovery-execution) and [Using Mocks: Patterns and Best Practices](/guides/mocking-and-advanced-techniques/using-mocks) to master the capabilities of GoogleTest and GoogleMock.
 
-## Additional Resources
-
-- [What is GoogleTest?](./overview/intro-value-prop/what-is-googletest) — Start here for a gentle product introduction.
-- [Core Value and Key Features](./overview/intro-value-prop/core-value-features) — Dive into capabilities that shape the architecture.
-- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Beginner-friendly guide to mocks.
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Covers advanced mocking strategies.
-- [Test Structure & Lifecycle](./api-reference/core-testing-api/test-structure) — API reference on test lifecycles.
-- [Integration with Build Systems & Other Tools](./overview/integration-feature-overview/integration-build-systems) — Ensure you build and integrate properly.
 
 ---
 
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "googlemock/src/gmock_main.cc", "range": "1-59"}]} />
+For the complete walkthrough, refer to related documentation such as the [GoogleTest Primer](https://google.github.io/googletest/primer.html), [Mocking Reference](reference/mocking.md), and [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html).
+
+
+---
+
+## References
+
+- GoogleTest Primer: Introduction to basic test writing.
+- Mocking Reference: In-depth guidance on defining and using mocks.
+- gmock_main.cc: Entry point showing integration of GoogleMock and GoogleTest initialization.
+
+<Source url="https://github.com/google/googletest" paths={[{"path": "googlemock/src/gmock_main.cc", "range": "1-57"}]} />
+
+---
