--- a/getting-started/prerequisites-installation/system-requirements.mdx
+++ b/getting-started/prerequisites-installation/system-requirements.mdx
@@ -1,182 +1,147 @@
 ---
 title: "System Requirements"
-description: "Review supported platforms, compilers, C++ standards, and dependencies required to run GoogleTest and GoogleMock. Understand compatibility and tools needed before proceeding."
+description: "Understand the operating systems, compilers, C++ standards, and dependencies that GoogleTest supports. Learn about supported platforms so you can ensure compatibility and avoid environment-related issues from the outset."
 ---
 
-# System Requirements for GoogleTest and GoogleMock
+# System Requirements
 
-Understanding the system requirements and compatibility of GoogleTest and GoogleMock is essential to ensure a smooth setup and successful integration. This guide outlines the supported platforms, required compilers, minimum C++ standard, and library dependencies you need before building and running tests with GoogleTest.
-
----
-
-## 1. Supported Platforms
-
-GoogleTest is designed to be portable across a wide range of operating systems and platforms. It follows Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support).
-
-### Officially Supported Platforms Include:
-
-- **Linux** (various distributions)
-- **Windows** (including Desktop and MinGW environments)
-- **macOS**
-- Several BSD variants (FreeBSD, OpenBSD, NetBSD)
-- Other Unix-like environments including Solaris, AIX
-
-> See the detailed platform compatibility matrix here: [Supported Platforms Table](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
-
-### Platform Notes:
-
-- Some platforms like Cygwin, Linux Android, and Windows Mobile have tailored support, and some features might be limited or unavailable.
-- Mobile, embedded, or less common platforms may have reduced or unstable support.
-
-## 2. Compiler and Language Standards
-
-### Minimum Required Compiler Versions:
-
-- GCC 7.0 or later
-- Clang 3.4 or later
-- MSVC 2017 Update 3 (MSVC 19.11) or later
-- Intel LLVM variants consistent with C++17 support
-
-### C++ Standard Requirement
-
-GoogleTest requires **C++17** or higher for successful compilation. Ensure your build environment specifies this, for example using:
-
-- In CMake:  
-  ```cmake
-  set(CMAKE_CXX_STANDARD 17)
-  set(CMAKE_CXX_STANDARD_REQUIRED ON)
-  ```
-- Compiler flags:
-  - GCC/Clang: `-std=c++17`
-  - MSVC: Ensure project settings use at least C++17
-
-### Exception and RTTI Support
-
-- GoogleTest detects exception support automatically but can be manually overridden with macros like `-DGTEST_HAS_EXCEPTIONS=1` or `-0`.
-- RTTI is required by default but can be disabled with careful use of `-DGTEST_HAS_RTTI=0`.
-
-## 3. Library Dependencies
-
-### Threading Support
-
-- GoogleTest is thread-safe on platforms where the POSIX Threads (pthreads) library is available.
-- On Windows, native threading APIs are used.
-- If the platform lacks threading support, thread safety and certain features (e.g., death tests) may be limited.
-
-### Regular Expression Libraries
-
-- GoogleTest utilizes different regular expression implementations based on platform and build options:
-  - RE2 (via Abseil) if configured
-  - POSIX regex where available
-  - A built-in simple regex engine as fallback
-
-### Build Tools
-
-- **CMake** (minimum version 3.14 for some build features) is the primary supported build system.
-- **pkg-config** support is included to ease integration and dependency management.
-
-## 4. Environment and Platform Macros
-
-GoogleTest uses a set of predefined macros to detect platform capabilities and features:
-
-- Operating system macros like `GTEST_OS_LINUX`, `GTEST_OS_WINDOWS`, `GTEST_OS_MAC`, etc.
-- Feature flags such as `GTEST_HAS_PTHREAD`, `GTEST_HAS_EXCEPTIONS`, `GTEST_HAS_RTTI`, and `GTEST_HAS_DEATH_TEST`.
-- These macros are defined automatically, but they can be overridden if needed via compiler flags for customization.
-
-## 5. Summary Table of Critical Requirements
-
-| Requirement                      | Detail                                           |
-|---------------------------------|--------------------------------------------------|
-| C++ Standard                    | C++17 or newer                                   |
-| Minimum Compiler Versions       | GCC ≥ 7.0, Clang ≥ 3.4, MSVC 2017 Update 3      |
-| Supported OSes                  | Linux, Windows, macOS, BSD variants, Solaris    |
-| Threading Support               | pthreads on Unix; Windows native threads         |
-| Exception Handling              | Enabled by default; can disable via macro        |
-| RTTI Support                   | Enabled by default; can disable via macro        |
-| Build Tools                     | CMake (≥3.14 for FetchContent), pkg-config       |
-
-## 6. Additional Notes
-
-- **Multi-threaded tests:** GoogleTest is thread-safe only when pthreads or native threading libraries are present and enabled.
-- **Shared library builds:** When building as shared libraries (DLLs) on Windows, specific macros like `-DGTEST_CREATE_SHARED_LIBRARY=1` must be added.
-- **Wide string support:** GoogleTest supports wide strings on platforms that provide them (mostly desktop environments).
-
-## 7. Troubleshooting System Compatibility
-
-If you encounter build or runtime issues related to platform or compiler incompatibilities:
-
-- Verify that your compiler supports C++17 features required by GoogleTest.
-- Confirm threading libraries and POSIX features are available and properly linked.
-- Check that environment-specific macros haven't been manually overridden.
-- Consult the GoogleTest [Supported Platforms](https://github.com/google/googletest/blob/main/docs/platforms.md) documentation.
-- Adjust compiler and linker flags as needed, especially for threading and exception support.
-
-## 8. References and Links
-
-- [GoogleTest Supported Platforms](https://github.com/google/googletest/blob/main/docs/platforms.md)
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) 
-- [Building and Configuring GoogleTest](https://github.com/google/googletest/blob/main/README.md)
-- [GoogleTest CMake Build Instructions](https://cmake.org/)
-- [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support)
+Ensure your development environment supports GoogleTest by meeting the following system requirements and dependencies. Proper alignment with these requirements guarantees a smooth build and testing experience.
 
 ---
 
-## Diagram: GoogleTest Platform and Feature Detection Flow
+## 1. Supported Operating Systems
 
-```mermaid
-flowchart TD
+GoogleTest supports a wide range of operating systems to enable cross-platform testing:
 
-  Start([Start Build Process]) --> DetectEnv["Detect Environment Macros"]
+- **Linux:** Various distributions including Debian, Ubuntu, Fedora, and others
+- **Windows:** Desktop Windows, including MSVC toolchain support; MinGW
+- **Mac OS X:** Including support for development with Xcode
+- **BSD Variants:** FreeBSD, OpenBSD, NetBSD
+- **Others:** Solaris, AIX, Android, Windows Mobile, embedded platforms like ESP32 and ESP8266
 
-  DetectEnv -->|Detects OS| PlatformCheck{Platform}
+> Note: Some platforms may have limited support or may require additional setup for threading and file system capabilities.
 
-  PlatformCheck -->|Windows| Windows["GTEST_OS_WINDOWS"]
-  PlatformCheck -->|Linux| Linux["GTEST_OS_LINUX"]
-  PlatformCheck -->|macOS| Mac["GTEST_OS_MAC"]
-  PlatformCheck -->|Others| Other["Other Supported OS Macros"]
+## 2. Compiler and Toolchain Requirements
 
-  Windows --> CheckThreadSupportWindows["Check Thread Support via Windows Native APIs"]
-  Linux --> CheckPthread["Check pthread Availability"]
-  Mac --> CheckPthread
-  Other --> CheckPthread
+GoogleTest requires a C++ compiler capable of supporting modern standards and features:
 
-  CheckPthread -->|Found| EnableThreadsafe["Enable GTEST_IS_THREADSAFE=1"]
-  CheckPthread -->|Not Found| DisableThreadsafe["Disable Thread Safety"]
+- Must support **C++17** or later (required for core library functionality).
+- Officially tested with:
+  - Microsoft Visual C++ (MSVC) 2017 Update 3 and newer
+  - GCC 7.0.0 and later
+  - Clang (including Apple Clang) with C++17 support
+  - Intel LLVM Compiler supporting C++17
+- CMake support is required for build configuration. Minimum recommended version is **CMake 3.13** for building standalone, **3.14+** if you use `FetchContent_MakeAvailable()`.
 
-  EnableThreadsafe --> CheckExceptions["Check for Exception Support"]
-  DisableThreadsafe --> CheckExceptions
+### Compiler Flags Handling
 
-  CheckExceptions -->|Enabled| EnableExceptions["GTEST_HAS_EXCEPTIONS=1"]
-  CheckExceptions -->|Disabled| DisableExceptions["GTEST_HAS_EXCEPTIONS=0"]
+GoogleTest’s build system includes logic to adjust compiler flags depending on:
 
-  EnableExceptions & DisableExceptions --> CheckRTTI["Check for RTTI Support"]
+- Compiler type (MSVC, GCC, Clang, IntelLLVM, etc.)
+- Build type (static vs shared libraries)
+- Threading model (pthreads detection and flags)
 
-  CheckRTTI -->|Enabled| EnableRTTI["GTEST_HAS_RTTI=1"]
-  CheckRTTI -->|Disabled| DisableRTTI["GTEST_HAS_RTTI=0"]
+This ensures safer behavior like stricter warnings and correct runtime library linkage.
 
-  EnableRTTI & DisableRTTI --> CheckFeatures["Final Feature Set Determined"]
 
-  CheckFeatures --> End([Build Configured])
+## 3. Required Dependencies
 
-  classDef decision fill:#f9f,stroke:#333,stroke-width:2px;
-  class PlatformCheck decision;
-  
+### Core Dependencies:
+
+- **CMake:** For generating build scripts.
+- **Threads library:** Supports pthreads on *nix platforms for thread safety in tests.
+  - Disabled on MinGW where pthreads support is partial or unreliable.
+- **Python 3:** Required only if building GoogleTest’s own Python-based tests.
+
+### Recommended:
+
+- An environment that supports or has configured thread support improves test stability.
+  Adjust the `-DGTEST_HAS_PTHREAD=1` or `0` manually if required.
+
+## 4. C++ Standard and Toolchain Settings
+
+- GoogleTest **requires C++17**.
+- To ensure compatibility, specify in your project's top-level CMakeLists.txt:
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 ```
 
+- When compiling, GoogleTest configures appropriate compiler flags for exception support, RTTI, warnings, and other platform-specific tweaks.
+
+## 5. Platform-Specific Considerations
+
+- **Windows:**
+  - Visual Studio users may encounter runtime library conflicts when linking GoogleTest; use the CMake option `gtest_force_shared_crt` to align runtime linkage.
+  - GoogleTest ensures UTF-8 encoding for sources.
+
+- **MinGW:**
+  - pthreads support is disabled by default.
+  - Ninja builds might incorrectly specify some compiler flags, which GoogleTest corrects internally.
+
+- **Mac OS X:**
+  - Xcode project files are generated for easy native building.
+
+- **Embedded Platforms:**
+  - Platforms like ESP8266 and ESP32 have limited file system and threading support; some GoogleTest features may be restricted or disabled.
+
+## 6. Threading and Concurrency Support
+
+- GoogleTest is thread-safe **if pthreads are available and enabled**.
+- Detection of pthreads support happens automatically during build configuration.
+- You can override thread support with compiler definitions:
+
+  - `-DGTEST_HAS_PTHREAD=1` to force enable
+  - `-DGTEST_HAS_PTHREAD=0` to disable
+
+- Without threading support, GoogleTest implements dummy synchronization primitives, limiting safe concurrent test execution.
+
+## 7. File System and I/O
+
+- GoogleTest requires a functional file system for some test features (such as death tests and output capture).
+- Most supported platforms have file system support enabled by default.
+- Embedded or restricted platforms might disable these features.
+
+## 8. Recommended Environment Setup
+
+### Using CMake to Build GoogleTest Standalone
+
+```bash
+git clone https://github.com/google/googletest.git -b v1.17.0
+cd googletest
+mkdir build
+cd build
+cmake ..
+make
+sudo make install
+```
+
+- For building **only GoogleTest** without GoogleMock:
+
+```bash
+cmake .. -DBUILD_GMOCK=OFF
+```
+
+### Incorporating GoogleTest into Existing Projects
+
+- Use `find_package(GTest CONFIG REQUIRED)` if GoogleTest is installed.
+- Or, embed GoogleTest sources via `add_subdirectory(googletest)`.
+- Make sure your project also meets or enforces the C++17 standard.
+
+## 9. Troubleshooting
+
+- If your compiler fails due to missing C++17 support, upgrade your compiler.
+- On Windows, if you encounter runtime library mismatch errors, enable `gtest_force_shared_crt`.
+- If tests using threads fail to link, ensure pthread libraries are correctly linked or disable pthread support.
+- For cross-compilation environments, review pkg-config usage and sysroot settings to ensure correct include and library paths.
+
+## 10. Additional Resources
+
+- [GoogleTest README.md](https://github.com/google/googletest/blob/main/googletest/README.md): Detailed build and usage instructions.
+- [Platform Portability and Internal Utilities](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/gtest-port.h): Low-level platform abstractions crucial for compatibility.
+- [Pkg-config Usage Guide](docs/pkgconfig.md): Guidance on using pkg-config in various build environments.
+
 ---
 
-## Next Steps
-
-- Confirm your development environment meets these requirements.
-- Proceed to [Installation on Linux, macOS, and Windows](../prerequisites-installation/installation-platforms) guide.
-- Explore building and configuring your project with GoogleTest using CMake as detailed in the [Building and Configuring Your Project](../prerequisites-installation/building-configuring-project) guide.
-
----
-
-<Check>
-Make sure your compiler supports C++17 and that appropriate threading libraries are available to leverage full GoogleTest capabilities.
-</Check>
-
-<Note>
-Using the provided CMake build scripts will automatically manage most platform-specific flags and dependencies.
-</Note>
+For detailed usage and configuration beyond system requirements, consult related documentation pages such as [Configuring GoogleTest in Your Project](../getting-started/prerequisites-installation/configuration-setup) and [Setting Up and Installing GoogleTest](../guides/getting-started/setup-installation).
